--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ output:
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE, comment = "#>", fig.path = "README/README-",
+  collapse = TRUE, comment = "#>", fig.path = "README/README-", 
   message = FALSE, warning = FALSE, fig.asp = 1, fig.align = 'center'
 )
 ```
@@ -83,14 +83,17 @@ test_rotasym(data = data_0, type = "loc_vMF")
 test_rotasym(data = data_0, type = "hyb_vMF")
 ```
 
-## Data application: rotational symmetry of sunspots
+## Data application: test for the rotational symmetry of sunspots
+
+The data application in García-Portugués, Paindaveine and Verdebout (2019) can
+be reproduced through the script [sunspots-births.R](https://github.com/egarpor/rotasym/blob/master/data-raw/sunspots-births.R) (data gathering and preprocessing) and the code snippet below.
 
 ```{r, sunspots_births}
 # Load data
 data("sunspots_births")
-sunspots_births$X <-
-  cbind(cos(sunspots_births$phi) * cos(sunspots_births$theta),
-        cos(sunspots_births$phi) * sin(sunspots_births$theta),
+sunspots_births$X <- 
+  cbind(cos(sunspots_births$phi) * cos(sunspots_births$theta), 
+        cos(sunspots_births$phi) * sin(sunspots_births$theta), 
         sin(sunspots_births$phi))
 
 # Test rotational symmetry for the 23rd cycle
