--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ output:
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE, comment = "#>", fig.path = "README/README-", 
+  collapse = TRUE, comment = "#>", fig.path = "README/README-",
   message = FALSE, warning = FALSE, fig.asp = 1, fig.align = 'center'
 )
 ```
@@ -22,7 +22,7 @@ rotasym
 
 ## Overview
 
-Software companion for the paper "*On optimal tests for rotational symmetry against new classes of hyperspherical distributions*" (García-Portugués, Paindaveine and Verdebout, 2019). It implements the proposed tests for rotational symmetry of hyperspherical data and allows to replicate the data application presented.
+Software companion for the paper "*On optimal tests for rotational symmetry against new classes of hyperspherical distributions*" (García-Portugués, Paindaveine and Verdebout, 2020). It implements the proposed tests for rotational symmetry of hyperspherical data and allows to replicate the data application presented.
 
 ## Installation
 
@@ -85,15 +85,15 @@ test_rotasym(data = data_0, type = "hyb_vMF")
 
 ## Data application: test for the rotational symmetry of sunspots
 
-The data application in García-Portugués, Paindaveine and Verdebout (2019) can
+The data application in García-Portugués, Paindaveine and Verdebout (2020) can
 be reproduced through the script [sunspots-births.R](https://github.com/egarpor/rotasym/blob/master/data-raw/sunspots-births.R) (data gathering and preprocessing) and the code snippet below.
 
 ```{r, sunspots_births}
 # Load data
 data("sunspots_births")
-sunspots_births$X <- 
-  cbind(cos(sunspots_births$phi) * cos(sunspots_births$theta), 
-        cos(sunspots_births$phi) * sin(sunspots_births$theta), 
+sunspots_births$X <-
+  cbind(cos(sunspots_births$phi) * cos(sunspots_births$theta),
+        cos(sunspots_births$phi) * sin(sunspots_births$theta),
         sin(sunspots_births$phi))
 
 # Test rotational symmetry for the 23rd cycle
@@ -114,4 +114,4 @@ example("sunspots_births")
 
 ## References
 
-García-Portugués, E., Paindaveine, D., and Verdebout, T. (2019). On optimal tests for rotational symmetry against new classes of hyperspherical distributions. *arXiv:1706.05030*. <https://arxiv.org/abs/1706.05030>
+García-Portugués, E., Paindaveine, D., and Verdebout, T. (2020). On optimal tests for rotational symmetry against new classes of hyperspherical distributions. *Journal of the American Statistical Association*, to appear. <https://doi.org/10.1007/s11222-017-9790-2>
