--- a/README.Rmd
+++ b/README.Rmd
@@ -121,4 +121,4 @@ example("sunspots_births")
 
 ## References
 
-García-Portugués, E., Paindaveine, D., and Verdebout, T. (2020). On optimal tests for rotational symmetry against new classes of hyperspherical distributions. *Journal of the American Statistical Association*, to appear. <https://doi.org/10.1080/01621459.2019.1665527>
+García-Portugués, E., Paindaveine, D., and Verdebout, T. (2020). On optimal tests for rotational symmetry against new classes of hyperspherical distributions. *Journal of the American Statistical Association*, 115(532):1873--1887. <https://doi.org/10.1080/01621459.2019.1665527>
