--- a/README.Rmd
+++ b/README.Rmd
@@ -72,7 +72,7 @@ set.seed(123456789)
 data_0 <- r_vMF(n = n, mu = theta, kappa = 1)
 ```
 
-### Specified-$\boldsymbol{\theta}$ case
+### Specified-θ case
 
 ```{r, specified}
 # theta known
@@ -81,7 +81,7 @@ test_rotasym(data = data_0, theta = theta, type = "loc_vMF")
 test_rotasym(data = data_0, theta = theta, type = "hyb_vMF")
 ```
 
-### Unspecified-$\boldsymbol{\theta}$ case
+### Unspecified-θ case
 
 ```{r, unspecified}
 # theta unknown (employs the spherical mean as estimator)
@@ -93,9 +93,9 @@ test_rotasym(data = data_0, type = "hyb_vMF")
 ## Data application: test for the rotational symmetry of sunspots
 
 The data application in García-Portugués, Paindaveine and Verdebout (2020) can
-be reproduced through the script [sunspots-births.R](https://github.com/egarpor/rotasym/blob/master/data-raw/sunspots-births.R) (data gathering and preprocessing) and the code snippet below.
+be replicated through the script [sunspots-births.R](https://github.com/egarpor/rotasym/blob/master/data-raw/sunspots-births.R) (data gathering and preprocessing) and the code snippet below.
 
-```{r, sunspots_births}
+```{r, sunspots_births, fig.show = 'hold'}
 # Load data
 data("sunspots_births")
 sunspots_births$X <-
