--- a/README.Rmd
+++ b/README.Rmd
@@ -92,8 +92,7 @@ test_rotasym(data = data_0, type = "hyb_vMF")
 
 ## Data application: test for the rotational symmetry of sunspots
 
-The data application in García-Portugués, Paindaveine and Verdebout (2020) can
-be replicated through the script [sunspots-births.R](https://github.com/egarpor/rotasym/blob/master/data-raw/sunspots-births.R) (data gathering and preprocessing) and the code snippet below.
+The data used in García-Portugués, Paindaveine and Verdebout (2020) is available in the object `sunspot_births`, which is created through the script [sunspots.R](https://github.com/egarpor/rotasym/blob/master/data-raw/sunspots.R). The code snippet below reproduces the main results in the paper.
 
 ```{r, sunspots_births, fig.show = 'hold'}
 # Load data
